--- a/dada/extras/documentation/pod_source/changes_9_x.pod
+++ b/dada/extras/documentation/pod_source/changes_9_x.pod
@@ -8,9 +8,9 @@
 
 =head3 Rate Limiting
 
-We've enabled a B<Rate Limiting> in Dada Mail! This is a safegaurd against perhaps nefarious attempts at attacking the Dada Mail when there are many requests done in a short space of time. Before v9.4.0, Dada Mail would happily try to serve each request, and sometimes this would cause problems. One scenario:
+We've enabled a B<Rate Limiting> in Dada Mail! This is a safeguard against perhaps nefarious attempts at attacking the Dada Mail when there are many requests done in a short space of time. Before v9.4.0, Dada Mail would happily try to serve each request, and sometimes this would cause problems. One scenario:
 
-Say you have a subscrption form, and say that form has been targeted by a bot in an attempt to exploit it. There currently aren't any known exploits out there in the wild for Dada Mail, but perhaps the bot doesn't know that, so it just tries to fill out your form multiple times a I<second>. This can cause problems with resources on your hosting account reaching their limit, and cann also cause multiple emails to be sent to bogus addresses, and probably bounce back, which cause much annoyance. If you utilize a third party email service, like Amazon SES (which we highly recommend!), this can work against you, as this service monitors bounce rates closely and will not allow the rate to go too high. If it does, you're in hot water with Amazon AWS.
+Say you have a subscrption form, and say that form has been targeted by a bot in an attempt to exploit it. There aren't any currently known exploits out there in the wild for Dada Mail, but perhaps the bot doesn't know that, so it just tries to fill out your form multiple times a I<second>. This can cause problems with resources on your hosting account reaching their limit, and cann also cause multiple emails to be sent to bogus addresses, and probably bounce back, which cause much annoyance. If you utilize a third party email service, like Amazon SES (which we highly recommend!), this can work against you, as this service monitors bounce rates closely and will not allow the rate to go too high. If it does, you're in hot water with Amazon AWS.
 
 Dada Mail's Rate Limiting now monitors who is requesting what, and how many times. If it notices what could potentially be signs of abuse, it'll deny the request for a small amount of time. This stops flagrant and out-of-control abuse of the app and does so easily.
 
