--- a/dada/extras/documentation/pod_source/changes_9_x.pod
+++ b/dada/extras/documentation/pod_source/changes_9_x.pod
@@ -18,7 +18,7 @@ Save Bounce Handler preferences for multiple mailing lists at once.
 
 =head3 Scheduled Jobs now can be run without a crojob
 
-The Scheduled Jobs require a cronjob to be set up, but many times this cronjob is not correctly set up or is removed by accident, causing some of Dada Mail's advanced functonality to not work correctly. Now, Dada Mail will periodically run the required Schduled Jobs, if it thinks the jobs have not been run recently. We still strongly suggest to set up the cronjob to have the best exprience with usig Dada Mail. 
+The Scheduled Jobs require a cronjob to be set up, but many times this cronjob is not correctly set up or is removed by accident, causing some of Dada Mail's advanced functonality to not work correctly. Now, Dada Mail will periodically run the required Scheduled Jobs, if it thinks the jobs have not been run recently. We still strongly suggest to set up the cronjob to have the best experience with using Dada Mail. 
 
 More information on Dada Mail's Scheduled Jobs (cronjob)
 L<http://dadamailproject.com/d/features-scheduled_cronjobs.pod.html>
@@ -29,7 +29,7 @@ This option can be enabled/disabled in the included installer and is enabled by 
 
 =head4 Trend data now exportable
 
-On the default screen of the Tracker plugin, you'll see a tabl and line graph of basic informaton about the performanc of your mass mailings, allowing you to easily to see trends over time. This data can do be exported per page presented. Look for the link labeled, B<export page (.csv) > to the right of the page navigation. 
+On the default screen of the Tracker plugin, you'll see a table and line graph of basic informaton about the performance of your mass mailings, allowing you to easily to see trends over time. This data can do be exported per page presented. Look for the link labeled, B<export page (.csv) > to the right of the page navigation. 
 
 =head3 Abuse Protection: Detect and Stop Suspicious Activity by IP Address
 
@@ -37,7 +37,7 @@ Dada Mail has may systems to help prevent abuse of it's subscripton system:
 
 =over
 
-=item * Limiting double subcription confirmations
+=item * Limiting double subcription confirmation sending
 
 =item * Rate Limiting attempts by IP Address in a short amount of time
 
@@ -47,7 +47,7 @@ Dada Mail has may systems to help prevent abuse of it's subscripton system:
 
 Now Dada Mail can also detect possible suspicious activity by IP Address during a subscription request by looking at trends over time of previous requests. If multiple subscription requests are happening from the same IP Address, using different email addresses, the subscription request is blocked. 
 
-This new feature works well with the current systems: StopForumSpam doesn't always lists every email address/IP Address that causes abuse, and Dada Mail's own Rate Limiting feature works best for Denial of Service attempts, and not suspicious activity that happens slowly over the course of days. That's where this new feature comes in. 
+This new feature works well with the current systems: StopForumSpam doesn't always list every email address/IP address that causes abuse, and Dada Mail's own Rate Limiting feature works best for Denial of Service attack attempts, and not suspicious activity that happens slowly over the course of days. That's where this new feature comes in. 
 
 Enabled by default, you may enable/disable the feature in the List Control Panel, in B<Mailing List - Options>, Look for the checkbox labeled, B<Enable Suspicious IP Address Activity Protection>
 
