--- a/dada/extras/documentation/pod_source/features-restful_web_services.pod
+++ b/dada/extras/documentation/pod_source/features-restful_web_services.pod
@@ -643,4 +643,23 @@ Returned will be a JSON doc:
 
 C<status> again will be set to, C<1> if the request itself was successful (C<0>, otherwise). B<results> will hold just one paramater:  
 
-C<message_id> is the message id associated with this particular mass mailing.       
+C<message_id> is the message id associated with this particular mass mailing.   
+
+=head1 Debugging Problems
+
+The actual underlying module for Dada Mail's web services, C<DADA::App::WebServices>, may have debugging turned on. This also will return additional debugging information to the client itslf, B<including sensitive information (like the private key!).
+
+This debugging may be turned on from within the installer. See:
+L<http://dadamailproject.com/d/install_dada_mail-advanced_configuration.pod.html#Configure-Debugging>
+
+You'll want to check the option for, C<DADA::App::WebServices>.
+
+=head2 Make the Authorization header available
+
+For POST requests, the client will send the required digest in the, C<Authorizaton> header. If this header is not available (and you're running Apache), try adding the following line to your C<.htaccess> file, 
+
+	SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
+
+This line already exists in the C<.htaccess> file location in the C<dada> directory, although it's commented out. Just remove the first, C<#> character to uncomment it.
+
+
