Clearing things up a bit,

--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -10,9 +10,7 @@
 
 =head4 Powered by Foundation for Emails
 
-Foundation for Emails (L<http://foundation.zurb.com/emails.html>) is a framework to develop 
-HTML email messages that, "Sucks Less": they're beautiful, resposive, and look correctly in most HTML-capable 
-email readers - even Outlook. 
+Foundation for Emails (L<http://foundation.zurb.com/emails.html>) is a framework to develop HTML email messages that, "Sucks Less": they're beautiful, responsive, and look correctly in most HTML-capable email readers - even Outlook. 
 
 Work with these HTML emails via SASS Workflow documented here:
 
@@ -30,13 +28,11 @@ Create documention on how to do that!
 
 =head4 Email Themes
 
-Dada Mail now has support for, B<Email Themes>: collections of email templates that 
-you can use to customize the look and feel of your email messages. 
+Dada Mail now has support for, B<Email Themes>: collections of email templates that you may use to customize the look and feel of your email messages. 
 
 B<TODO>:
 
-Currently, Dada Mail only comes with one email theme, but should support additional themes in the future, with the idea
-that people can create and share their own themes. 
+Currently, Dada Mail only comes with one email theme, but should support additional themes in the future, with the idea that people can create and share their own themes. 
 
 =head4 Mass Mailing Email Layouts
 
@@ -58,8 +54,7 @@ Currently, the following layout options are available:
 
 =head4 Mass Mailing Preview
 
-Without needing to send a test message out, you can now preview how your mass mailing will look, right in the Send a Message
-screen. This makes it easy to try different layouts and other options out, before comitting to sending to your entire mailing list. 
+Without needing to send a test message out, you can now preview how your mass mailing will look, right in the Send a Message screen. This makes it easy to try different layouts and other options out, before comitting to sending to your entire mailing list. 
 
 =head4 Set an image and social network links in messages
 
